kubernetes/istio/service4/service-4-delay-10s.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service4-delay-10s
spec:
  hosts:
  - service4
  http:
  - route:
    - destination:
        host: service4
        subset: v2
    fault:
      delay:
        percent: 100
        fixedDelay: 10s
