kubernetes/istio/service4/service-4-delay-5s-chrome.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service4-delay-5s-chrome
spec:
  hosts:
  - service4
  http:
  - match:
    - headers:
        user-agent:
          regex: ".*Chrome.*"
    fault:
      delay:
        percent: 100
        fixedDelay: 5s
    route:
    - destination:
        host: service4
        subset: v2
