kubernetes/istio/service4/service-4-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service4-destination-rule
spec:
  host: service4
  subsets:
  - name: v2
    labels:
      version: v2
