kubernetes/istio/service4/service-4-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service4-virtual-service
spec:
  hosts:
  - service4
  gateways:
  - virtual-service-gateway
  http:
  - route:
    - destination:
        host: service4
        subset: v2
